--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@ venv/
 .vscode/
 *.swp
 *.swo
+bot/handlers/__pycache__/main_menu.cpython-313.pyc
+bot/handlers/__pycache__/places.cpython-313.pyc
+bot/handlers/__pycache__/settings.cpython-313.pyc
+bot/services/__pycache__/__init__.cpython-313.pyc
+bot/services/__pycache__/api_client.cpython-313.pyc
+bot/services/__pycache__/settings.cpython-313.pyc
+bot/utils/__pycache__/__init__.cpython-313.pyc
+bot/utils/__pycache__/formatter.cpython-313.pyc
+bot/utils/__pycache__/logger.cpython-313.pyc
